<resources>
    <string name="app_name">Pophory</string>인

    <!-- common -->
    <string name="ok">확인</string>속
    <string name="cancel">취소</string>
    <string name="close">닫기</string>
    <string name="delete">삭제</string>
    <string name="save">저장</string>
    <string name="s_continue">계속하기</string>
    <string name="s_return">돌아가기</string>

    <!-- home_bottomAppBar -->
    <string name="menu_bottom_my_drawer">내서랍</string>
    <string name="menu_bottom_my">마이</string>

    <!-- description -->
    <string name="album_image">album image</string>

    <!-- home_stroe -->
    <string name="store_logo_contentDescription">앱의 로고 입니다.</string>
    <string name="store_welcome">"에\n소중한 추억을 보관해 봐!"</string>

    <!-- home_mypage -->
    <string name="mypage_name_default">포포리</string>
    <string name="mypage_picture_count_default">그동안 찍은 사진 n장</string>
    <string name="mypage_picture_count">그동안 찍은 사진 %d장</string>
    <string name="mypage_feed_title">네컷사진 모아보기</string>
    <string name="mypage_feed_empty">네컷 사진을 추가해볼까?</string>

    <!-- onboarding -->
    <string name="signup_with_sns">SNS로 간편 가입하기!</string>
    <string name="start_with_kakao">Kakao로 시작하기</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_up_first_title">포포리에서 사용할\n너의 이름을 알려줘!</string>
    <string name="sign_up_first_sub_title">한글 2-6자리 이내로 작성해주세요\n이름은 이후에 수정이 어려워요</string>
    <string name="sign_up_first_name_hint">이름</string>
    <string name="sign_up_second_title">너만의 재치있는\n포포리 아이디를 만들어줘!</string>
    <string name="sign_up_second_sub_title">영문, 숫자, 특수문자 조합 4-12자리 이내로\n작성해주세요 (특수문자는 . _ 만 가능해요)</string>
    <string name="sign_up_second_id_hint">아이디</string>
    <string name="sign_up_second_count">(0/12)</string>
    <string name="sign_up_first_count">(0/6)</string>
    <string name="sign_up_third_title">마음에 쏙 드는\n앨범 테마를 선택해줘!</string>
    <string name="sign_up_third_content_theme_change">테마는 언제든지 변경이 가능해요</string>
    <string name="start_pophory_text">포릿만을 위한\n앨범이 준비됐어!</string>
    <string name="start_pophory">포포리 시작하기</string>
    <string name="sign_up_id_popup_content">이미 있는 아이디에요\n다른 아이디를 입력해주세요!</string>
    <string name="sign_up_popup_button">돌아가기</string>
    <string name="sign_up_next_button">다음으로 넘어가기</string>

    <!-- album -->
    <string name="sort_newest">최근에 찍은 순</string>
    <string name="sort_oldest">과거에 찍은 순</string>
    <string name="select_sort">정렬 선택하기</string>
    <string name="dialog_title_photo_limit">포포리 앨범이 가득찼어요</string>
    <string name="dialog_message_photo_limit">아쉽지만,\n다음 업데이트에서 만나요!</string>
    <string name="edit">수정하기</string>

    <!-- story -->
    <string name="story_title">포릿 이야기</string>

    <!-- album_edit -->
    <string name="edit_album_ad_title">앨범을 수정할까요?</string>
    <string name="edit_album_ad_description">앨범 커버를 수정하려면 광고 시청 하나 부탁드려요!</string>

    <!-- qr -->
    <string name="qr_toolbar_text">QR로 등록하기</string>
    <string name="qr_image_load_fail">이미지 로드에 실패 하였습니다.</string>
    <string name="qr_image_download_fail">이미지 다운로드에 실패하하였습니다.</string>
    <string name="qr_view_finder_text">QR코드를 스캔해줘!</string>
    <string name="qr_view_finder_text_detail">지원하지 않는 사진관의 경우,웹사이트로 이동할게요</string>

    <!-- Add BottomSheet -->
    <string name="add_photo_bottom_sheet_photo_title">사진 등록하기</string>
    <string name="add_photo_bottom_sheet_photo_qr_regist">QR로 등록하기</string>
    <string name="add_photo_bottom_sheet_photo_gallery_regist">앨범에서 등록하기</string>
</resources>
