<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_20dp_white"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/dragHandle"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_margin="13dp"
        android:background="@drawable/bg_round_100dp_gray30"
        android:paddingHorizontal="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_select_feature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_photo_bottom_sheet_photo_title"
        android:textAppearance="?textAppearanceModalText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dragHandle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_feature">

        <LinearLayout
            android:id="@+id/layout_qr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_8dp_gray20"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_qr_code" />

            <TextView
                style="@style/TextAppearance.Pophory.PopupButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo_bottom_sheet_photo_qr_regist" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_gallery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_8dp_gray20"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_gallery" />

            <TextView
                style="@style/TextAppearance.Pophory.PopupButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo_bottom_sheet_photo_gallery_regist" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
